# cryptocopper

./: .gitignore  Cargo.toml  clean-nodes.sh  gen.sh  init.sh  node.sh
src/: main.rs
src/service/currency/: api.rs  mod.rs  schema.rs  service.rs  transactions.rs  tx.rs  wallet.rs
srv/dat/db/0/: 000017.sst  000018.sst  000019.sst  000020.sst  000021.sst  000043.sst  IDENTITY  LOG  LOG.old.1511478292219177  LOG.old.1511478311951348  LOG.old.1511478350984558  LOG.old.1511508508751376  LOG.old.1511508567458784  MANIFEST-000038  OPTIONS-000042  OPTIONS-000045
srv/dat/db/1/: 000019.sst  000020.sst  000021.sst  000022.sst  000023.sst  000024.sst  000030.sst  000031.sst  000032.sst  000034.sst  000036.sst  IDENTITY  LOG  LOG.old.1511508564511365  LOG.old.1511508606532578  LOG.old.1511508640675504  MANIFEST-000035  OPTIONS-000039
srv/dat/db/2/: 000019.sst  000020.sst  000021.sst  000022.sst  000023.sst  000024.sst  000030.sst  000031.sst  000032.sst  000033.sst  000034.sst  IDENTITY  LOG  LOG.old.1511508563049164  LOG.old.1511508621198512  LOG.old.1511508638935947  MANIFEST-000037  OPTIONS-000037
srv/etc-/: 1-node.toml  1-priv.toml  1-pub.toml  2-node.toml  2-priv.toml  2-pub.toml  conf1.toml  pub1.toml  tpl-api.toml  tpl.toml
srv/etc-/a/: 1  1.pub
srv/etc/validators/: 0.toml  1.toml  2.toml
